--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
   <div class="pista" id="pista4">
     <div class="corredor" id="gato4">
       <img class="animal" src="animal.gif">
-      <img class="bandera" src="https://upload.wikimedia.org/wikipedia/en/0/05/Flag_of_Brazil.svg">
+      <img class="bandera" src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg">
     </div>
     <div class="meta"></div>
     <div class="gol" id="gol4">GOL!</div>
@@ -198,7 +198,7 @@
       { id: "gato1", nombre: "México", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg" },
       { id: "gato2", nombre: "Ecuador", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/commons/e/e8/Flag_of_Ecuador.svg" },
       { id: "gato3", nombre: "Colombia", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg" },
-      { id: "gato4", nombre: "Brasil", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/en/0/05/Flag_of_Brazil.svg" },
+      { id: "gato4", nombre: "Guatemala", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg" },
       { id: "gato5", nombre: "Argentina", avance: 0, goles: 0, bandera: "https://upload.wikimedia.org/wikipedia/commons/1/1a/Flag_of_Argentina.svg" }
     ];
 
