--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     }
 
     .bandera-marcador {
-      width: 30px;
-      height: 20px;
+      width: 59px;  /* 30px + 30% = 39px */
+      height: 36px; /* 20px + 30% = 26px */
     }
 
     .botones-goles {
