--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>MUNDIAL DE CLUBES</title>
+  <title>Carrera de Países</title>
   <style>
     body {
       font-family: sans-serif;
-      background: #111 url('fondo.jpeg') no-repeat center center fixed;
-      background-size: cover;
+      background: #111;
       color: white;
       text-align: center;
       padding-top: 20px;
@@ -26,6 +25,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      position: relative;
     }
 
     .bandera img {
@@ -36,7 +36,7 @@
 
     .contador {
       margin-top: 5px;
-      font-size: 33.4px;
+      font-size: 43.4px;
       color: yellow;
     }
 
@@ -164,9 +164,89 @@
       font-size: 18px;
       text-shadow: 0 0 2px #000, 0 0 3px #000;
     }
+
+    .bandera.eliminada img {
+      filter: grayscale(100%) brightness(0.4);
+      opacity: 0.5;
+    }
+
+    .bandera.eliminada::after {
+      content: "✖";
+      color: red;
+      font-size: 38px;
+      font-weight: bold;
+      position: absolute;
+      top: 5px;
+      left: 20px;
+      z-index: 10;
+      pointer-events: none;
+    }
+
+    /* Estilos para el selector de fondo */
+    .fondo-selector {
+      margin-top: 20px;
+      position: relative;
+      display: inline-block;
+    }
+
+    .fondo-boton {
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #555;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-left: 10px;
+    }
+
+    .fondo-boton:hover {
+      background: #777;
+    }
+
+    .fondo-lista {
+      display: none;
+      position: absolute;
+      background-color: #333;
+      min-width: 160px;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      left: 50%;
+      transform: translateX(-50%);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .fondo-lista a {
+      color: white;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      cursor: pointer;
+    }
+
+    .fondo-lista a:hover {
+      background-color: #555;
+    }
+
+    .fondo-seleccionado {
+      background-color: rgba(0,0,0,0.5);
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      background-size: cover;
+      background-position: center;
+      opacity: 0.2;
+      transition: background-image 0.5s ease;
+    }
   </style>
 </head>
 <body>
+
+<div class="fondo-seleccionado" id="fondoSeleccionado"></div>
 
 <div class="banderas">
   <div class="bandera">
@@ -174,74 +254,81 @@
     <div class="contador" id="v_venezuela">0</div>
     <button onclick="sumarVictoria('venezuela')">+</button>
     <button onclick="restarVictoria('venezuela')">−</button>
+    <button onclick="eliminarBandera('venezuela')">X</button>
   </div>
   <div class="bandera">
-    <img src="https://flagcdn.com/w80/ar.png" alt="Argentina">
-    <div class="contador" id="v_argentina">0</div>
-    <button onclick="sumarVictoria('argentina')">+</button>
-    <button onclick="restarVictoria('argentina')">−</button>
+    <img src="https://flagcdn.com/w80/mx.png" alt="México">
+    <div class="contador" id="v_mexico">0</div>
+    <button onclick="sumarVictoria('mexico')">+</button>
+    <button onclick="restarVictoria('mexico')">−</button>
+    <button onclick="eliminarBandera('mexico')">X</button>
   </div>
   <div class="bandera">
     <img src="https://flagcdn.com/w80/cl.png" alt="Chile">
     <div class="contador" id="v_chile">0</div>
     <button onclick="sumarVictoria('chile')">+</button>
     <button onclick="restarVictoria('chile')">−</button>
-  </div>
-  <div class="bandera">
-    <img src="https://flagcdn.com/w80/sv.png" alt="El Salvador">
-    <div class="contador" id="v_elsalvador">0</div>
-    <button onclick="sumarVictoria('elsalvador')">+</button>
-    <button onclick="restarVictoria('elsalvador')">−</button>
+    <button onclick="eliminarBandera('chile')">X</button>
   </div>
   <div class="bandera">
     <img src="https://flagcdn.com/w80/co.png" alt="Colombia">
     <div class="contador" id="v_colombia">0</div>
     <button onclick="sumarVictoria('colombia')">+</button>
     <button onclick="restarVictoria('colombia')">−</button>
+    <button onclick="eliminarBandera('colombia')">X</button>
   </div>
   <div class="bandera">
-    <img src="https://flagcdn.com/w80/pe.png" alt="Perú">
-    <div class="contador" id="v_peru">0</div>
-    <button onclick="sumarVictoria('peru')">+</button>
-    <button onclick="restarVictoria('peru')">−</button>
-  </div>
-  <div class="bandera">
-    <img src="https://flagcdn.com/w80/cr.png" alt="Costa Rica">
-    <div class="contador" id="v_costarica">0</div>
-    <button onclick="sumarVictoria('costarica')">+</button>
-    <button onclick="restarVictoria('costarica')">−</button>
+    <img src="https://flagcdn.com/w80/ec.png" alt="Ecuador">
+    <div class="contador" id="v_ecuador">0</div>
+    <button onclick="sumarVictoria('ecuador')">+</button>
+    <button onclick="restarVictoria('ecuador')">−</button>
+    <button onclick="eliminarBandera('ecuador')">X</button>
   </div>
 </div>
 
 <!-- Pistas -->
 <div class="track"><div class="runner" id="venezuela" style="background-image: url('https://flagcdn.com/w80/ve.png'); left: 0;"></div><div class="meta">META</div></div>
-<div class="track"><div class="runner" id="argentina" style="background-image: url('https://flagcdn.com/w80/ar.png'); left: 0;"></div><div class="meta">META</div></div>
-<div class="track"><div class="runner" id="chile" style="background-image: url('https://flagcdn.com/w80/cl.png'); left: 0;"></div><div class="meta">META</div></div>
-<div class="track"><div class="runner" id="elsalvador" style="background-image: url('https://flagcdn.com/w80/sv.png'); left: 0;"></div><div class="meta">META</div></div>
+<div class="track"><div class="runner" id="mexico" style="background-image: url('https://flagcdn.com/w80/mx.png'); left: 0;"></div><div class="meta">META</div></div>
+<div class="track">
+  <div class="runner" id="chile" style="background-image: url('https://flagcdn.com/w80/cl.png'); left: 0;">
+  </div>
+  <div class="meta">META</div>
+</div>
 <div class="track"><div class="runner" id="colombia" style="background-image: url('https://flagcdn.com/w80/co.png'); left: 0;"></div><div class="meta">META</div></div>
-<div class="track"><div class="runner" id="peru" style="background-image: url('https://flagcdn.com/w80/pe.png'); left: 0;"></div><div class="meta">META</div></div>
-<div class="track"><div class="runner" id="costarica" style="background-image: url('https://flagcdn.com/w80/cr.png'); left: 0;"></div><div class="meta">META</div></div>
+<div class="track"><div class="runner" id="ecuador" style="background-image: url('https://flagcdn.com/w80/ec.png'); left: 0;"></div><div class="meta">META</div></div>
 
 <div id="winner"></div>
-<button onclick="reiniciarCarrera()">Reiniciar carrera</button>
+<div style="display: inline-block;">
+  <button onclick="reiniciarCarrera()">Reiniciar carrera</button>
+  <div class="fondo-selector">
+    <button class="fondo-boton" onclick="toggleFondoLista()">Fondo</button>
+    <div class="fondo-lista" id="fondoLista">
+      <a onclick="cambiarFondo('venezuela')">Venezuela</a>
+      <a onclick="cambiarFondo('mexico')">México</a>
+      <a onclick="cambiarFondo('chile')">Chile</a>
+      <a onclick="cambiarFondo('colombia')">Colombia</a>
+      <a onclick="cambiarFondo('ecuador')">Ecuador</a>
+      <a onclick="cambiarFondo('')">Sin fondo</a>
+    </div>
+  </div>
+</div>
 
 <audio id="sonido" src="https://www.fesliyanstudios.com/play-mp3/387" preload="auto"></audio>
 <audio id="sonidoGol" src="https://cdn.pixabay.com/download/audio/2023/03/06/audio_d11352f717.mp3" preload="auto"></audio>
-
 <script>
   const flags = {
     venezuela: 'https://flagcdn.com/w320/ve.png',
-    argentina: 'https://flagcdn.com/w320/ar.png',
+    mexico: 'https://flagcdn.com/w320/mx.png',
     chile: 'https://flagcdn.com/w320/cl.png',
-    elsalvador: 'https://flagcdn.com/w320/sv.png',
     colombia: 'https://flagcdn.com/w320/co.png',
-    peru: 'https://flagcdn.com/w320/pe.png',
-    costarica: 'https://flagcdn.com/w320/cr.png'
+    ecuador: 'https://flagcdn.com/w320/ec.png'
   };
 
   const positions = {};
   const victorias = {};
+  const banderasEliminadas = new Set();
   const paises = Object.keys(flags);
+
   paises.forEach(p => {
     positions[p] = 0;
     victorias[p] = 0;
@@ -256,14 +343,18 @@
   document.addEventListener('keydown', (e) => {
     const tecla = e.key;
     const index = parseInt(tecla) - 1;
+    
     if (index >= 0 && index < paises.length) {
       const pais = paises[index];
       if (document.getElementById("winner").innerText !== "") return;
+      if (banderasEliminadas.has(pais)) return;
       advance(pais, flags[pais]);
     }
   });
 
   function advance(pais, banderaUrl) {
+    if (banderasEliminadas.has(pais)) return;
+
     positions[pais] += 5;
     if (positions[pais] >= 90) {
       positions[pais] = 90;
@@ -291,6 +382,7 @@
   }
 
   function capitalize(str) {
+    if (str === 'mexico') return 'México';
     return str.charAt(0).toUpperCase() + str.slice(1);
   }
 
@@ -325,6 +417,44 @@
     if (victorias[pais] > 0) {
       victorias[pais]--;
       document.getElementById("v_" + pais).innerText = victorias[pais];
+    }
+  }
+
+  function eliminarBandera(pais) {
+    const contenedor = document.getElementById("v_" + pais).closest('.bandera');
+    contenedor.classList.toggle('eliminada');
+    if (contenedor.classList.contains('eliminada')) {
+      banderasEliminadas.add(pais);
+    } else {
+      banderasEliminadas.delete(pais);
+    }
+  }
+
+  // Funciones para el selector de fondo
+  function toggleFondoLista() {
+    const lista = document.getElementById("fondoLista");
+    lista.style.display = lista.style.display === "block" ? "none" : "block";
+  }
+
+  function cambiarFondo(pais) {
+    const fondo = document.getElementById("fondoSeleccionado");
+    if (pais && flags[pais]) {
+      fondo.style.backgroundImage = `url('${flags[pais]}')`;
+      fondo.style.opacity = "0.2";
+    } else {
+      fondo.style.backgroundImage = "none";
+      fondo.style.opacity = "0";
+    }
+    toggleFondoLista();
+  }
+
+  // Cerrar el menú de fondo al hacer clic fuera
+  window.onclick = function(event) {
+    if (!event.target.matches('.fondo-boton')) {
+      const lista = document.getElementById("fondoLista");
+      if (lista.style.display === "block") {
+        lista.style.display = "none";
+      }
     }
   }
 </script>
